@startuml

    class Book {
        title: string
        subtitle: string
        short_description: string
        description: string
        settings: jsonb
    }


    enum BookKind {
        cooking
        health_wellness
        house_care
        fabric_art
    }

    class Content {
        categories: Tag[]
        rating
        version: string, such as "1.0", "2.0", "Christmas, 2020", "with Jane's changes"
    }

    class ContentBlock {
        raw_text: string
        raw_data: jsonb
        processed_data: jsonb
    }

    enum ContentKind {
        article
        recipe
        tutorial
        ingredient
        textile
        fiber
        pattern
    }

    enum ContentBlockKind {
        servings
        shopping_instructions
        ingredients_sequence
        ingredient
        instructions_sequence
        steps
        step
        time
        nutrition_facts
        notes
        comment
        tips
        variations
        left_over_preservation_instructions
        suggested_accompaniments
    }

    class ServingsData {
        amount: number
        unit: string
    }

    class IngredientLinesData {
        ingredient_lines: ingredient_line[]
    }

    class IngredientLineData {
        amount: number
        unit: string
        ingredient: string
    }

    class InstructionsData {

    }

    class Tag {
        book : Book
        kind : TagKind
        word : string
        plural : string
        related_tags : Tag[]
    }

    enum TagKind {
        ingredient: Ingrédients principaux (légumes, viande, poisson, tomate, poulet, etc.)
        seasons: Saisons (printemps, été, automne, hiver, janvier, février, etc.)
        occasion: Occasions spéciales (Noël, Pâques, etc.)
        category: Type de plat (gratin, soupe, etc.)
        geographic_area: Région du monde (Asie, Europe, France, Lyon, etc.)
        restriction: Régimes spéciaux (végétarien, végétalien, sans gluten, allergies, etc.)
        sources: Sources (livres, sites web, etc.)
        chefs: Chefs (Paul Bocuse, etc.)
        authors: Auteurs (Marie Kondo, etc.)
        meals: Repas (petit-déjeuner, déjeuner, dîner, etc.)
        courses: Plats (entrée, plat principal, dessert, etc.)
    }

    Book *-- Content : contains >
    Content *-- ContentBlock : composed by >

@enduml
